details and ui desgin updates

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1 class="text-center">Shopaholic Store</h1>
   </header>
   <main class="main">
-    <div class="search-field">
+    <div  class="search-field">
       <div class="search-box">
         <input id="input-field" class="search-field" type="text" />
         <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
@@ -30,6 +30,10 @@
           Search
         </button>
       </div>
+    </div>
+    <!-- Details -->
+    <div id="product-details" >
+
     </div>
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
