fixed cart issues and edited styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-  
+   
   <!-- google Montserrat  font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
 
 <body>
   <header>
-    <h1 class="text-center">Shopaholic Store</h1>
+    <h1 class="text-center text-primary">Shopaholic Store</h1>
   </header>
   <main class="main">
     <div  class="search-field">
@@ -32,9 +32,10 @@
       </div>
     </div>
     <!-- Details -->
-    <div id="product-details" >
+    <div id="product-details">
 
     </div>
+    <!-- cart -->
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
