--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
     <div id="product-details">
 
     </div>
-    <!-- cart -->
+   <!-- all products -->
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
           <!-- <h1></h1> -->
         </div>
       </div>
+       <!-- cart -->
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
         <div class="cart" id="my-cart">
           <table class="table">
@@ -93,7 +94,9 @@
       </div>
     </div>
   </main>
-  <footer></footer>
+  <footer class="footer">
+    <p class="text-center">&copy; All credit reserved by Shopaholic Store</p>
+  </footer>
 
   <!-- add javascript  file  -->
   <script src="./js/app.js"></script>
